ci(@prisma/instrumentation): update pkg like CLI/Client
Goodbye Renovate PRs like https://github.com/prisma/ecosystem-tests/pull/3771

--- a/renovate.json
+++ b/renovate.json
@@ -10,12 +10,8 @@
   "prConcurrentLimit": 17,
   "schedule": ["before 7am every weekday", "every weekend"],
   "rebaseWhen": "auto",
-  "ignoreDeps": ["prisma", "@prisma/client"],
+  "ignoreDeps": ["prisma", "@prisma/client", "@prisma/instrumentation"],
   "packageRules": [
-    {
-      "matchPackageNames": ["@prisma/instrumentation"],
-      "followTag": "dev"
-    },
     {
       "groupName": ["svelte packages"],
       "matchPackagePatterns": "svelte"
