--- a/renovate.json
+++ b/renovate.json
@@ -2,13 +2,14 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base", ":noUnscheduledUpdates"],
   "reviewers": ["@Jolg42", "@millsp", "@aqrln", "@SevInf", "@jkomyno"],
+  "schedule": ["before 7am every weekday", "every weekend"],
+  "automergeSchedule": ["before 7am every weekday"],
   "automerge": true,
   "major": {
     "automerge": false
   },
   "dependencyDashboard": true,
   "prConcurrentLimit": 17,
-  "schedule": ["before 7am every weekday", "every weekend"],
   "rebaseWhen": "auto",
   "ignoreDeps": ["prisma", "@prisma/client", "@prisma/instrumentation"],
   "packageRules": [
