--- a/dataproxy/cloudflare-workers-service/package.json
+++ b/dataproxy/cloudflare-workers-service/package.json
@@ -6,7 +6,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.3.0-dev.19",
-    "@prisma/extension-accelerate": "0.6.0"
+    "@prisma/extension-accelerate": "0.0.0-experimental-61dc08b"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "4.20230821.0",
