--- a/dataproxy/deno/package.json
+++ b/dataproxy/deno/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "5.3.0-dev.19",
-    "@prisma/extension-accelerate": "0.6.0"
+    "@prisma/extension-accelerate": "0.0.0-experimental-61dc08b"
   },
   "devDependencies": {
     "prisma": "5.3.0-dev.19"
