--- a/dataproxy/nodejs-mysql-itx/package.json
+++ b/dataproxy/nodejs-mysql-itx/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.3.0-dev.19",
-    "@prisma/extension-accelerate": "0.6.0"
+    "@prisma/extension-accelerate": "0.0.0-experimental-61dc08b"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.0",
