--- a/dataproxy/nodejs-postgresql-logs/package.json
+++ b/dataproxy/nodejs-postgresql-logs/package.json
@@ -6,7 +6,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.3.0-dev.19",
-    "@prisma/extension-accelerate": "0.6.0"
+    "@prisma/extension-accelerate": "0.0.0-experimental-61dc08b"
   },
   "devDependencies": {
     "@jest/globals": "29.6.4",
