--- a/dataproxy/vercel-cli-serverless-functions/package.json
+++ b/dataproxy/vercel-cli-serverless-functions/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.3.0-dev.19",
-    "@prisma/extension-accelerate": "0.6.0",
+    "@prisma/extension-accelerate": "0.0.0-experimental-61dc08b",
     "fetch-retry": "5.0.6",
     "node-fetch": "2.7.0"
   },
