--- a/dataproxy/vercel-edge-functions/package.json
+++ b/dataproxy/vercel-edge-functions/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.3.0-dev.19",
-    "@prisma/extension-accelerate": "0.6.0",
+    "@prisma/extension-accelerate": "0.0.0-experimental-61dc08b",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0"
