fix: broken tests

--- a/platforms-serverless/serverless-framework-lambda/tsconfig.json
+++ b/platforms-serverless/serverless-framework-lambda/tsconfig.json
@@ -5,6 +5,7 @@
     "outDir": ".",
     "strict": true,
     "lib": ["esnext", "dom"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true,
   }
 }
