set side-effects cache to false

--- a/.npmrc
+++ b/.npmrc
@@ -3,3 +3,7 @@ shared-workspace-lockfile=false
 
 # without this, installing one project installs all
 recursive-install=false
+
+# so client postinstall hook is not cached for all
+# https://github.com/pnpm/pnpm/releases/tag/v8.7.1
+side-effects-cache=false
