attempt to upgrade redwood

--- a/platforms-serverless-vercel/vercel-with-redwood/scripts/jsconfig.json
+++ b/platforms-serverless-vercel/vercel-with-redwood/scripts/jsconfig.json
@@ -1,21 +1,23 @@
 {
   "compilerOptions": {
     "noEmit": true,
-    "allowJs": true,
     "esModuleInterop": true,
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
     "baseUrl": "./",
     "paths": {
       "$api/*": [
-        "../api/*",
+        "../api/*"
       ],
       "api/*": [
-        "../api/*",
+        "../api/*"
       ],
       "$web/*": [
-        "../web/*",
+        "../web/*"
       ],
       "web/*": [
-        "../web/*",
+        "../web/*"
       ],
       "$web/src/*": [
         "../web/src/*",
@@ -25,9 +27,21 @@
         "../web/src/*",
         "../.redwood/types/mirror/web/src/*"
       ],
-      "types/*": ["../types/*", "../web/types/*", "../api/types/*"],
+      "types/*": [
+        "../types/*",
+        "../web/types/*",
+        "../api/types/*"
+      ]
     },
-    "typeRoots": ["../node_modules/@types"],
-    "jsx": "preserve",
+    "typeRoots": [
+      "../node_modules/@types"
+    ],
+    "jsx": "preserve"
   },
+  "include": [
+    ".",
+    "../.redwood/types/includes/all-*",
+    "../.redwood/types/includes/web-*",
+    "../types"
+  ]
 }
