--- a/platforms-serverless-vercel/vercel-with-redwood/.env.defaults
+++ b/platforms-serverless-vercel/vercel-with-redwood/.env.defaults
@@ -12,14 +12,8 @@
 # disables Prisma CLI update notifier
 PRISMA_HIDE_UPDATE_MESSAGE=true
 
-
 # Option to override the current environment's default api-side log level
-# See: https://redwoodjs.com/docs/logger for level options:
-# trace | info | debug | warn | error | silent
+# See: https://redwoodjs.com/docs/logger for level options, defaults to "trace" otherwise.
+# Most applications want "debug" or "info" during dev, "trace" when you have issues and "warn" in production.
+# Ordered by how verbose they are: trace | debug | info | warn | error | silent
 # LOG_LEVEL=debug
-
-# Sets an app-specific secret used to sign and verify your own app's webhooks.
-# For example if you schedule a cron job with a signed payload that later will
-# then invoke your api-side webhook function you will use this secret to sign and the verify.
-# Important: Please change this default to a strong password or other secret
-WEBHOOK_SECRET=THIS_IS_NOT_SECRET_PLEASE_CHANGE
