--- a/platforms-serverless-vercel/vercel-with-redwood/.gitignore
+++ b/platforms-serverless-vercel/vercel-with-redwood/.gitignore
@@ -3,8 +3,6 @@
 .env
 .vercel
 .netlify
-.yarnrc
-yarn-*
 .redwood
 dev.db*
 dist
@@ -14,4 +12,12 @@ yarn-error.log
 web/public/mockServiceWorker.js
 web/types/graphql.d.ts
 api/types/graphql.d.ts
+api/src/lib/generateGraphiQLHeader.*
 deployment-url.txt
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
