--- a/platforms-serverless-vercel/vercel-with-redwood/api/jsconfig.json
+++ b/platforms-serverless-vercel/vercel-with-redwood/api/jsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
     "noEmit": true,
-    "allowJs": true,
     "esModuleInterop": true,
     "target": "esnext",
     "module": "esnext",
     "moduleResolution": "node",
+    "skipLibCheck": false,
     "baseUrl": "./",
     "rootDirs": [
       "./src",
@@ -16,18 +16,26 @@
         "./src/*",
         "../.redwood/types/mirror/api/src/*"
       ],
-      "types/*": ["./types/*"],
-      "@redwoodjs/testing": ["../node_modules/@redwoodjs/testing/api"]
+      "types/*": [
+        "./types/*",
+        "../types/*"
+      ],
+      "@redwoodjs/testing": [
+        "../node_modules/@redwoodjs/testing/api"
+      ]
     },
     "typeRoots": [
       "../node_modules/@types",
       "./node_modules/@types"
     ],
-    "types": ["jest"],
+    "types": [
+      "jest"
+    ]
   },
   "include": [
     "src",
     "../.redwood/types/includes/all-*",
     "../.redwood/types/includes/api-*",
+    "../types"
   ]
 }
