--- a/platforms-serverless-vercel/vercel-with-redwood/package.json
+++ b/platforms-serverless-vercel/vercel-with-redwood/package.json
@@ -3,12 +3,11 @@
   "workspaces": {
     "packages": [
       "api",
-      "web",
-      "packages/*"
+      "web"
     ]
   },
   "devDependencies": {
-    "@redwoodjs/core": "3.8.0",
+    "@redwoodjs/core": "6.1.0",
     "graphql-request": "6.1.0",
     "jest": "28.1.3",
     "vercel": "32.1.0"
@@ -22,8 +21,8 @@
     "root": true
   },
   "engines": {
-    "node": "16.x",
-    "yarn": ">=1.15 <2"
+    "node": "=18.x",
+    "yarn": ">=1.15"
   },
   "prisma": {
     "seed": "yarn rw exec seed"
@@ -34,5 +33,6 @@
   "dependencies": {
     "@prisma/client": "5.3.0-dev.32",
     "prisma": "5.3.0-dev.32"
-  }
+  },
+  "packageManager": "yarn@3.6.1"
 }
