--- a/platforms-serverless-vercel/vercel-with-redwood/web/package.json
+++ b/platforms-serverless-vercel/vercel-with-redwood/web/package.json
@@ -7,17 +7,18 @@
       "last 1 version"
     ],
     "production": [
-      "defaults",
-      "not IE 11",
-      "not IE_Mob 11"
+      "defaults"
     ]
   },
   "dependencies": {
-    "@redwoodjs/forms": "3.8.0",
-    "@redwoodjs/router": "3.8.0",
-    "@redwoodjs/web": "3.8.0",
+    "@redwoodjs/forms": "6.1.0",
+    "@redwoodjs/router": "6.1.0",
+    "@redwoodjs/web": "6.1.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@redwoodjs/vite": "6.1.0"
   }
 }
