--- a/platforms-serverless/serverless-framework-lambda/tsconfig.json
+++ b/platforms-serverless/serverless-framework-lambda/tsconfig.json
@@ -6,6 +6,7 @@
     "strict": true,
     "lib": ["esnext", "dom"],
     "esModuleInterop": true,
+    // workaround for a type issue in lodash itself
     "skipLibCheck": true,
   }
 }
