fix: broken tests and do some house keeping (#3880)
Co-authored-by: Joël Galeran <Jolg42@users.noreply.github.com>

--- a/platforms-serverless/serverless-framework-lambda/tsconfig.json
+++ b/platforms-serverless/serverless-framework-lambda/tsconfig.json
@@ -5,6 +5,8 @@
     "outDir": ".",
     "strict": true,
     "lib": ["esnext", "dom"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    // workaround for a type issue in lodash itself
+    "skipLibCheck": true,
   }
 }
