--- a/driver-adapters/postgresql-lambda-basic/package.json
+++ b/driver-adapters/postgresql-lambda-basic/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "aws-sdk": "2.1445.0",
+    "esbuild": "0.19.2",
     "jest": "28.1.3",
     "prisma": "5.3.0-integration-feat-js-connectors-in-client.13"
   },
