--- a/driver-adapters/postgresql-lambda-basic/package.json
+++ b/driver-adapters/postgresql-lambda-basic/package.json
@@ -13,8 +13,6 @@
   },
   "dependencies": {
     "@jkomyno/prisma-pg-js-connector": "0.0.9",
-    "@prisma/client": "5.3.0-integration-feat-js-connectors-in-client.13",
-    "next": "13.4.19",
-    "node-fetch": "2.7.0"
+    "@prisma/client": "5.3.0-integration-feat-js-connectors-in-client.13"
   }
 }
