--- a/driver-adapters/postgresql-lambda-basic/package.json
+++ b/driver-adapters/postgresql-lambda-basic/package.json
@@ -6,7 +6,7 @@
     "test": "jest index.test.js"
   },
   "devDependencies": {
-    "aws-sdk": "2.1450.0",
+    "@aws-sdk/client-lambda": "3.405.0",
     "esbuild": "0.19.2",
     "jest": "28.1.3",
     "prisma": "5.3.0-integration-feat-js-connectors-in-client.13"
