--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1131,6 +1131,7 @@ jobs:
         combo:
           - neon-lambda-basic
           - neon-vercel-nextjs
+          - planetscale-lambda-basic
           - planetscale-vercel-nextjs
           - postgresql-lambda-basic
           - postgresql-vercel-nextjs
