test(driver-adapters): basic lambda deployment (#3888)
* test(driver-adapters): basic lambda deployment

* skip other tests

* fix flakiness wrt ordering in results

* upload jkomyno to lambda

* upload more jkomyno

* bundle jkomyno to lambda

* make responses work

* debug

* properly deserialize json

* fix import

* update to aws client v3

* add missing import

* debug

* debug

* deserialize properly

* add tests for neon and lambda

* fix neon test

* add planetscale test for basic lambda

* add missing entry in yaml file

* debug

* increase timeout

* remove test skipping

* fix snapshot flakiness

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1129,8 +1129,11 @@ jobs:
       fail-fast: false
       matrix:
         combo:
+          - neon-lambda-basic
           - neon-vercel-nextjs
+          - planetscale-lambda-basic
           - planetscale-vercel-nextjs
+          - postgresql-lambda-basic
           - postgresql-vercel-nextjs
         clientEngine: ['library']
         os: [ubuntu-20.04]
@@ -1142,8 +1145,14 @@ jobs:
       NODE_VERBOSE: true
       VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
       VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_ROLE: ${{ secrets.AWS_ROLE }}
+      DRIVER_ADAPTERS_NEON_LAMBDA_BASIC_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_NEON_LAMBDA_BASIC_DATABASE_URL }}
       DRIVER_ADAPTERS_NEON_VERCEL_NEXTJS_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_NEON_VERCEL_NEXTJS_DATABASE_URL }}
       DRIVER_ADAPTERS_NEON_VERCEL_NEXTJS_PROJECT_ID: ${{ secrets.DRIVER_ADAPTERS_NEON_VERCEL_NEXTJS_PROJECT_ID }}
+      DRIVER_ADAPTERS_PLANETSCALE_LAMBDA_BASIC_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_PLANETSCALE_LAMBDA_BASIC_DATABASE_URL }}
       DRIVER_ADAPTERS_PLANETSCALE_VERCEL_NEXTJS_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_PLANETSCALE_VERCEL_NEXTJS_DATABASE_URL }}
       DRIVER_ADAPTERS_PLANETSCALE_VERCEL_NEXTJS_PROJECT_ID: ${{ secrets.DRIVER_ADAPTERS_PLANETSCALE_VERCEL_NEXTJS_PROJECT_ID }}
       DRIVER_ADAPTERS_POSTGRESQL_VERCEL_NEXTJS_PROJECT_ID: ${{ secrets.DRIVER_ADAPTERS_POSTGRESQL_VERCEL_NEXTJS_PROJECT_ID }}
