test(driver-adapters): basic node.js tests

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1130,6 +1130,7 @@ jobs:
       matrix:
         combo:
           - neon-lambda-basic
+          - neon-node-basic
           - neon-vercel-nextjs
           - planetscale-lambda-basic
           - planetscale-vercel-nextjs
