--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1133,8 +1133,10 @@ jobs:
           - neon-node-basic
           - neon-vercel-nextjs
           - planetscale-lambda-basic
+          - planetscale-node-basic
           - planetscale-vercel-nextjs
           - postgresql-lambda-basic
+          - postgresql-node-basic
           - postgresql-vercel-nextjs
         clientEngine: ['library']
         os: [ubuntu-20.04]
