--- a/platforms-serverless/serverless-framework-lambda/serverless.yml
+++ b/platforms-serverless/serverless-framework-lambda/serverless.yml
@@ -1,8 +1,8 @@
-service: e2e-tests-serverless-lambda
+service: platforms-serverless-serverless-framework-lambda-${env:PRISMA_CLIENT_ENGINE_TYPE}
 
 provider:
   name: aws
-  runtime: nodejs16.x
+  runtime: nodejs18.x
   memorySize: 512
   timeout: 10
   versionFunctions: false
@@ -12,7 +12,7 @@ provider:
 functions:
   hello:
     handler: index.handler
-    name: e2e-tests-serverless-lambda
+    name: platforms-serverless-serverless-framework-lambda-${env:PRISMA_CLIENT_ENGINE_TYPE}
     environment:
       DATABASE_URL: ${env:DATABASE_URL}
 
