--- a/platforms-serverless/serverless-framework-lambda/serverless.yml
+++ b/platforms-serverless/serverless-framework-lambda/serverless.yml
@@ -1,4 +1,4 @@
-service: e2e-tests-serverless-lambda
+service: eco-serverless-framework-lambda-${env:PRISMA_CLIENT_ENGINE_TYPE}
 
 provider:
   name: aws
@@ -12,7 +12,7 @@ provider:
 functions:
   hello:
     handler: index.handler
-    name: platforms-serverless-serverless-framework-lambda-${env:PRISMA_CLIENT_ENGINE_TYPE}
+    name: eco-serverless-framework-lambda-${env:PRISMA_CLIENT_ENGINE_TYPE}
     environment:
       DATABASE_URL: ${env:DATABASE_URL}
 
