use new DP2_ITX_PDP_MONGODB secret for Accelerate testing

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1279,7 +1279,7 @@ jobs:
           PRISMA_GENERATE_FLAG: '--accelerate'
           DATAPROXY_COMMON_URL: ${{ secrets.DP2_DATAPROXY_COMMON_URL }}
           ITX_PDP_MONGODB_DATABASE_URL: ${{ secrets.ITX_PDP_MONGODB_DATABASE_URL }}
-          ITX_PDP_MONGODB: ${{ secrets.ITX_PDP_MONGODB }}
+          ITX_PDP_MONGODB: ${{ secrets.DP2_ITX_PDP_MONGODB }}
           ITX_PDP_MYSQL_DATABASE_URL: ${{ secrets.ITX_PDP_MYSQL_DATABASE_URL }}
           ITX_PDP_MYSQL: ${{ secrets.DP2_ITX_PDP_MYSQL }}
           ITX_PDP_POSTGRESQL_DATABASE_URL: ${{ secrets.ITX_PDP_POSTGRESQL_DATABASE_URL }}
@@ -1300,7 +1300,7 @@ jobs:
           PRISMA_GENERATE_FLAG: '--accelerate'
           DATAPROXY_COMMON_URL: ${{ secrets.DP2_DATAPROXY_COMMON_URL }}
           ITX_PDP_MONGODB_DATABASE_URL: ${{ secrets.ITX_PDP_MONGODB_DATABASE_URL }}
-          ITX_PDP_MONGODB: ${{ secrets.ITX_PDP_MONGODB }}
+          ITX_PDP_MONGODB: ${{ secrets.DP2_ITX_PDP_MONGODB }}
           ITX_PDP_MYSQL_DATABASE_URL: ${{ secrets.ITX_PDP_MYSQL_DATABASE_URL }}
           ITX_PDP_MYSQL: ${{ secrets.DP2_ITX_PDP_MYSQL }}
           ITX_PDP_POSTGRESQL_DATABASE_URL: ${{ secrets.ITX_PDP_POSTGRESQL_DATABASE_URL }}
