--- a/driver-adapters/planetscale-vercel-nextjs/package.json
+++ b/driver-adapters/planetscale-vercel-nextjs/package.json
@@ -11,12 +11,13 @@
   },
   "devDependencies": {
     "jest": "28.1.3",
-    "prisma": "5.3.0-integration-feat-js-connectors-in-client.13",
+    "prisma": "5.3.0-integration-feat-driver-adapters-in-client.3",
     "vercel": "32.2.1"
   },
   "dependencies": {
-    "@jkomyno/prisma-planetscale-js-connector": "0.0.10",
-    "@prisma/client": "5.3.0-integration-feat-js-connectors-in-client.13",
+    "@jkomyno/prisma-adapter-planetscale": "0.2.1",
+    "@planetscale/database": "1.11.0",
+    "@prisma/client": "5.3.0-integration-feat-driver-adapters-in-client.3",
     "next": "13.4.19",
     "node-fetch": "2.7.0",
     "react": "18.2.0",
