--- a/driver-adapters/neon-lambda-basic/package.json
+++ b/driver-adapters/neon-lambda-basic/package.json
@@ -9,10 +9,12 @@
     "@aws-sdk/client-lambda": "3.410.0",
     "esbuild": "0.19.2",
     "jest": "28.1.3",
-    "prisma": "5.3.0-integration-feat-js-connectors-in-client.13"
+    "prisma": "5.3.0-integration-feat-driver-adapters-in-client.4"
   },
   "dependencies": {
-    "@jkomyno/prisma-neon-js-connector": "0.0.10",
-    "@prisma/client": "5.3.0-integration-feat-js-connectors-in-client.13"
+    "@jkomyno/prisma-adapter-neon": "0.2.1",
+    "@neondatabase/serverless": "0.6.0",
+    "@prisma/client": "5.3.0-integration-feat-driver-adapters-in-client.4",
+    "undici": "5.24.0"
   }
 }
