--- a/driver-adapters/neon-vercel-nextjs/package.json
+++ b/driver-adapters/neon-vercel-nextjs/package.json
@@ -11,15 +11,16 @@
   },
   "devDependencies": {
     "jest": "28.1.3",
-    "prisma": "5.3.0-integration-feat-js-connectors-in-client.13",
+    "prisma": "5.3.0-integration-feat-driver-adapters-in-client.4",
     "vercel": "32.2.1"
   },
   "dependencies": {
-    "@jkomyno/prisma-neon-js-connector": "0.0.10",
-    "@prisma/client": "5.3.0-integration-feat-js-connectors-in-client.13",
+    "@jkomyno/prisma-adapter-neon": "0.2.1",
+    "@prisma/client": "5.3.0-integration-feat-driver-adapters-in-client.4",
     "next": "13.4.19",
     "node-fetch": "2.7.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "undici": "5.24.0"
   }
 }
