--- a/driver-adapters/planetscale-node-basic/package.json
+++ b/driver-adapters/planetscale-node-basic/package.json
@@ -7,10 +7,11 @@
   },
   "devDependencies": {
     "jest": "28.1.3",
-    "prisma": "5.3.0-integration-feat-js-connectors-in-client.13"
+    "prisma": "5.3.0-integration-feat-driver-adapters-in-client.4"
   },
   "dependencies": {
-    "@jkomyno/prisma-planetscale-js-connector": "0.0.9",
-    "@prisma/client": "5.3.0-integration-feat-js-connectors-in-client.13"
+    "@jkomyno/prisma-adapter-planetscale": "0.2.1",
+    "@planetscale/database": "1.11.0",
+    "@prisma/client": "5.3.0-integration-feat-driver-adapters-in-client.4"
   }
 }
