--- a/driver-adapters/postgresql-lambda-basic/package.json
+++ b/driver-adapters/postgresql-lambda-basic/package.json
@@ -7,12 +7,14 @@
   },
   "devDependencies": {
     "@aws-sdk/client-lambda": "3.410.0",
+    "@types/pg": "^8.10.2",
     "esbuild": "0.19.2",
     "jest": "28.1.3",
-    "prisma": "5.3.0-integration-feat-js-connectors-in-client.13"
+    "prisma": "5.3.0-integration-feat-driver-adapters-in-client.4"
   },
   "dependencies": {
-    "@jkomyno/prisma-pg-js-connector": "0.0.10",
-    "@prisma/client": "5.3.0-integration-feat-js-connectors-in-client.13"
+    "@jkomyno/prisma-adapter-pg": "0.2.1",
+    "@prisma/client": "5.3.0-integration-feat-driver-adapters-in-client.4",
+    "pg": "8.11.3"
   }
 }
