--- a/driver-adapters/postgresql-node-basic/package.json
+++ b/driver-adapters/postgresql-node-basic/package.json
@@ -6,11 +6,13 @@
     "test": "jest index.test.js"
   },
   "devDependencies": {
+    "@types/pg": "^8.10.2",
     "jest": "28.1.3",
-    "prisma": "5.3.0-integration-feat-js-connectors-in-client.13"
+    "prisma": "5.3.0-integration-feat-driver-adapters-in-client.4"
   },
   "dependencies": {
-    "@jkomyno/prisma-pg-js-connector": "0.0.9",
-    "@prisma/client": "5.3.0-integration-feat-js-connectors-in-client.13"
+    "@jkomyno/prisma-adapter-pg": "0.2.1",
+    "@prisma/client": "5.3.0-integration-feat-driver-adapters-in-client.4",
+    "pg": "8.11.3"
   }
 }
