--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -982,7 +982,7 @@ jobs:
       AWS_ROLE: 'arn:aws:iam::275927176912:role/prisma-e2e-all'
       AZURE_SP_TENANT: '708e49af-cc04-4c4e-9953-42faddae1f60'
       AZURE_SP_PASSWORD: ${{ secrets.AZURE_SP_PASSWORD }}
-      AZURE_SP_NAME: 'http://Functions"'
+      AZURE_SP_NAME: 'http://Functions'
       FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
     steps:
