switch back GCP_FUNCTIONS_ACCOUNT to secrets

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -972,7 +972,7 @@ jobs:
       SSH_KEY_NETLIFY: ${{ secrets.SSH_KEY_NETLIFY }}
       SSH_KEY_NETLIFY_GITHUB_NETXJS_CACHING: ${{ secrets.SSH_KEY_NETLIFY_GITHUB_NETXJS_CACHING }}
       GCP_FUNCTIONS_PROJECT: ${{ vars.GCP_FUNCTIONS_PROJECT }}
-      GCP_FUNCTIONS_ACCOUNT: ${{ vars.GCP_FUNCTIONS_ACCOUNT }}
+      GCP_FUNCTIONS_ACCOUNT: ${{ secrets.GCP_FUNCTIONS_ACCOUNT }}
       GCP_FUNCTIONS_SECRET: ${{ secrets.GCP_FUNCTIONS_SECRET }}
       NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
       NETLIFY_SITE_ID: ${{ vars.NETLIFY_SITE_ID }}
