--- a/driver-adapters/neon-node-basic/package.json
+++ b/driver-adapters/neon-node-basic/package.json
@@ -7,12 +7,12 @@
   },
   "devDependencies": {
     "jest": "28.1.3",
-    "prisma": "5.3.0-integration-feat-driver-adapters-in-client.4"
+    "prisma": "5.4.0-dev.23"
   },
   "dependencies": {
-    "@jkomyno/prisma-adapter-neon": "0.2.1",
+    "@prisma/adapter-neon": "0.2.1",
     "@neondatabase/serverless": "0.6.0",
-    "@prisma/client": "5.3.0-integration-feat-driver-adapters-in-client.4",
+    "@prisma/client": "5.4.0-dev.23",
     "undici": "5.24.0"
   }
 }
