--- a/driver-adapters/planetscale-node-basic/package.json
+++ b/driver-adapters/planetscale-node-basic/package.json
@@ -7,11 +7,11 @@
   },
   "devDependencies": {
     "jest": "28.1.3",
-    "prisma": "5.3.0-integration-feat-driver-adapters-in-client.4"
+    "prisma": "5.4.0-dev.23"
   },
   "dependencies": {
-    "@jkomyno/prisma-adapter-planetscale": "0.2.1",
+    "@prisma/adapter-planetscale": "0.2.1",
     "@planetscale/database": "1.11.0",
-    "@prisma/client": "5.3.0-integration-feat-driver-adapters-in-client.4"
+    "@prisma/client": "5.4.0-dev.23"
   }
 }
