--- a/driver-adapters/planetscale-lambda-basic/package.json
+++ b/driver-adapters/planetscale-lambda-basic/package.json
@@ -9,11 +9,11 @@
     "@aws-sdk/client-lambda": "3.414.0",
     "esbuild": "0.19.3",
     "jest": "28.1.3",
-    "prisma": "5.3.0-integration-feat-driver-adapters-in-client.4"
+    "prisma": "5.4.0-dev.23"
   },
   "dependencies": {
-    "@jkomyno/prisma-adapter-planetscale": "0.2.1",
+    "@prisma/adapter-planetscale": "0.3.1",
     "@planetscale/database": "1.11.0",
-    "@prisma/client": "5.3.0-integration-feat-driver-adapters-in-client.4"
+    "@prisma/client": "5.4.0-dev.23"
   }
 }
