--- a/driver-adapters/planetscale-vercel-nextjs/package.json
+++ b/driver-adapters/planetscale-vercel-nextjs/package.json
@@ -11,13 +11,13 @@
   },
   "devDependencies": {
     "jest": "28.1.3",
-    "prisma": "5.3.0-integration-feat-driver-adapters-in-client.4",
+    "prisma": "5.4.0-dev.23",
     "vercel": "32.2.5"
   },
   "dependencies": {
-    "@jkomyno/prisma-adapter-planetscale": "0.2.1",
+    "@prisma/adapter-planetscale": "0.3.1",
     "@planetscale/database": "1.11.0",
-    "@prisma/client": "5.3.0-integration-feat-driver-adapters-in-client.4",
+    "@prisma/client": "5.4.0-dev.23",
     "next": "13.4.19",
     "node-fetch": "2.7.0",
     "react": "18.2.0",
