chore(driver-adapters): Use PRISMA_DISABLE_QUAINT_EXECUTORS to make sure Quaint is not used to run queries

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1162,6 +1162,7 @@ jobs:
       DRIVER_ADAPTERS_PLANETSCALE_VERCEL_NEXTJS_PROJECT_ID: ${{ vars.DRIVER_ADAPTERS_PLANETSCALE_VERCEL_NEXTJS_PROJECT_ID }}
       DRIVER_ADAPTERS_POSTGRESQL_VERCEL_NEXTJS_PROJECT_ID: ${{ vars.DRIVER_ADAPTERS_POSTGRESQL_VERCEL_NEXTJS_PROJECT_ID }}
       DEBUG: 'prisma:js-connector*'
+      PRISMA_DISABLE_QUAINT_EXECUTORS: true
 
     steps:
       - uses: actions/checkout@v4
