--- a/renovate.json
+++ b/renovate.json
@@ -14,6 +14,10 @@
   "ignoreDeps": ["prisma", "@prisma/client", "@prisma/instrumentation"],
   "packageRules": [
     {
+      "groupName": ["prisma driver adapters"],
+      "matchPackagePatterns": "@prisma/*adapter*"
+    },
+    {
       "groupName": ["svelte packages"],
       "matchPackagePatterns": "svelte"
     },
