--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -74,6 +74,32 @@ jobs:
       - id: detect
         run: ./.github/workflows/detect-jobs-to-run.js <<<'${{ steps.files.outputs.all }}'
 
+  confirm_all_jobs_have_run:
+    name: Confirm all jobs have run
+    runs-on: ubuntu-20.04
+    needs:
+      - dataproxy
+      - core-features
+      - migrate
+      - os
+      - node
+      - binaries
+      - packagers
+      - frameworks
+      - platforms
+      - platforms-serverless
+      - engines
+      - bundlers
+      - libraries
+      - databases
+      - databases-macos
+      - process-managers
+      - test-runners
+      - docker
+    if: always()
+    steps:
+      - run: echo "Ok"
+  
   report-to-slack-success:
     runs-on: ubuntu-20.04
     needs:
