--- a/driver-adapters/turso-node-basic/package.json
+++ b/driver-adapters/turso-node-basic/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "neon-node-basic",
+  "name": "turso-node-basic",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,6 @@
   "dependencies": {
     "@libsql/client": "^0.3.5",
     "@prisma/adapter-libsql": "0.2.3",
-    "@prisma/client": "5.4.0-dev.43",
-    "undici": "5.25.2"
+    "@prisma/client": "5.4.0-dev.43"
   }
 }
