--- a/driver-adapters/turso-vercel-nextjs/package.json
+++ b/driver-adapters/turso-vercel-nextjs/package.json
@@ -21,7 +21,6 @@
     "next": "13.4.19",
     "node-fetch": "2.7.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "undici": "5.25.2"
+    "react-dom": "18.2.0"
   }
 }
