chore(renovate.json): create PR for prisma driver adapters at any time

--- a/renovate.json
+++ b/renovate.json
@@ -15,7 +15,8 @@
   "packageRules": [
     {
       "groupName": ["prisma driver adapters"],
-      "matchPackagePatterns": "@prisma/*adapter*"
+      "matchPackagePatterns": "@prisma/*adapter*",
+      "schedule": ["at any time"]
     },
     {
       "groupName": ["svelte packages"],
