--- a/renovate.json
+++ b/renovate.json
@@ -14,7 +14,7 @@
   "ignoreDeps": ["prisma", "@prisma/client", "@prisma/instrumentation"],
   "packageRules": [
     {
-      "groupName": ["prisma driver adapters"],
+      "groupName": ["Prisma Driver Adapters"],
       "matchPackagePatterns": "@prisma/*adapter*",
       "schedule": ["at any time"]
     },
