chore(renovate.json): create PR for prisma driver adapters at any time (#4051)

--- a/renovate.json
+++ b/renovate.json
@@ -14,8 +14,9 @@
   "ignoreDeps": ["prisma", "@prisma/client", "@prisma/instrumentation"],
   "packageRules": [
     {
-      "groupName": ["prisma driver adapters"],
-      "matchPackagePatterns": "@prisma/*adapter*"
+      "groupName": ["Prisma Driver Adapters"],
+      "matchPackagePatterns": "@prisma/*adapter*",
+      "schedule": ["at any time"]
     },
     {
       "groupName": ["svelte packages"],
