chore(renovate): fix driver adapters group
[skip ci]

--- a/renovate.json
+++ b/renovate.json
@@ -15,7 +15,8 @@
   "packageRules": [
     {
       "groupName": ["Prisma Driver Adapters"],
-      "matchPackagePatterns": ["@prisma/.*adapter.*"],
+      "matchPackageNames": ["@prisma/driver-adapter-utils"],
+      "matchPackagePatterns": ["^@prisma/adapter"],
       "schedule": ["at any time"]
     },
     {
